# propsolve

./: .gitignore  Cargo.toml  README.md  flake.nix
example_formulas/: example_1
src/: input.rs  main.rs  output.rs  parser.rs
src/input/: mod.rs
src/output/: mod.rs
src/parser/: mod.rs
src/solver/: mod.rs
